// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin Stats setArea APPS should match snapshot 1`] = `
<Component
  flexColumn={true}
  hasPadding={true}
>
  <Component>
    <Component
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Component>
          Stats
        </Component>
      </div>
      <Component>
        Please select an area:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="area-apps-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Apps
        </Component>
        <Component
          dataTest="area-developers-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Developers
        </Component>
        <Component
          dataTest="area-installations-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Installations
        </Component>
      </Component>
      <Component>
        Please select a time range:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="range-week-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Last week
        </Component>
        <Component
          dataTest="range-month-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last Month
        </Component>
        <Component
          dataTest="range-all-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          All time
        </Component>
      </Component>
      <Component>
        Showing results for ‘
        APPS
        ’ and ‘
        Last Week
        ’
      </Component>
      <div>
        <Line
          data={
            Object {
              "datasets": Array [
                Object {
                  "backgroundColor": "rgba(75,192,192,0.4)",
                  "borderCapStyle": "butt",
                  "borderColor": "rgba(75,192,192,1)",
                  "borderDash": Array [],
                  "borderDashOffset": 0,
                  "borderJoinStyle": "miter",
                  "data": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                  "fill": false,
                  "label": "Apps",
                  "lineTension": 0.1,
                  "pointBackgroundColor": "#fff",
                  "pointBorderColor": "rgba(75,192,192,1)",
                  "pointBorderWidth": 1,
                  "pointHitRadius": 10,
                  "pointHoverBackgroundColor": "rgba(75,192,192,1)",
                  "pointHoverBorderColor": "rgba(220,220,220,1)",
                  "pointHoverBorderWidth": 2,
                  "pointHoverRadius": 5,
                  "pointRadius": 1,
                },
              ],
              "labels": Array [
                "03/10/2019",
                "04/10/2019",
                "05/10/2019",
                "06/10/2019",
                "07/10/2019",
                "08/10/2019",
                "09/10/2019",
                "10/10/2019",
              ],
            }
          }
        />
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`Admin Stats setArea DEVELOPRES should match snapshot 1`] = `
<Component
  flexColumn={true}
  hasPadding={true}
>
  <Component>
    <Component
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Component>
          Stats
        </Component>
      </div>
      <Component>
        Please select an area:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="area-apps-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Apps
        </Component>
        <Component
          dataTest="area-developers-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Developers
        </Component>
        <Component
          dataTest="area-installations-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Installations
        </Component>
      </Component>
      <Component>
        Please select a time range:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="range-week-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Last week
        </Component>
        <Component
          dataTest="range-month-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last Month
        </Component>
        <Component
          dataTest="range-all-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          All time
        </Component>
      </Component>
      <Component>
        Showing results for ‘
        DEVELOPERS
        ’ and ‘
        Last Week
        ’
      </Component>
      <div>
        <Line
          data={
            Object {
              "datasets": Array [
                Object {
                  "backgroundColor": "rgba(75,192,192,0.4)",
                  "borderCapStyle": "butt",
                  "borderColor": "rgba(75,192,192,1)",
                  "borderDash": Array [],
                  "borderDashOffset": 0,
                  "borderJoinStyle": "miter",
                  "data": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                  "fill": false,
                  "label": "Developers",
                  "lineTension": 0.1,
                  "pointBackgroundColor": "#fff",
                  "pointBorderColor": "rgba(75,192,192,1)",
                  "pointBorderWidth": 1,
                  "pointHitRadius": 10,
                  "pointHoverBackgroundColor": "rgba(75,192,192,1)",
                  "pointHoverBorderColor": "rgba(220,220,220,1)",
                  "pointHoverBorderWidth": 2,
                  "pointHoverRadius": 5,
                  "pointRadius": 1,
                },
              ],
              "labels": Array [
                "03/10/2019",
                "04/10/2019",
                "05/10/2019",
                "06/10/2019",
                "07/10/2019",
                "08/10/2019",
                "09/10/2019",
                "10/10/2019",
              ],
            }
          }
        />
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`Admin Stats setArea INSTALLATIONS should match snapshot 1`] = `
<Component
  flexColumn={true}
  hasPadding={true}
>
  <Component>
    <Component
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Component>
          Stats
        </Component>
      </div>
      <Component>
        Please select an area:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="area-apps-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Apps
        </Component>
        <Component
          dataTest="area-developers-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Developers
        </Component>
        <Component
          dataTest="area-installations-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Installations
        </Component>
      </Component>
      <Component>
        Please select a time range:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="range-week-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Last week
        </Component>
        <Component
          dataTest="range-month-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last Month
        </Component>
        <Component
          dataTest="range-all-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          All time
        </Component>
      </Component>
      <Component>
        Showing results for ‘
        INSTALLATIONS
        ’ and ‘
        Last Week
        ’
      </Component>
      <div>
        <Line
          data={
            Object {
              "datasets": Array [
                Object {
                  "backgroundColor": "rgba(75,192,192,0.4)",
                  "borderCapStyle": "butt",
                  "borderColor": "rgba(75,192,192,1)",
                  "borderDash": Array [],
                  "borderDashOffset": 0,
                  "borderJoinStyle": "miter",
                  "data": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                  "fill": false,
                  "label": "Installations",
                  "lineTension": 0.1,
                  "pointBackgroundColor": "#fff",
                  "pointBorderColor": "rgba(75,192,192,1)",
                  "pointBorderWidth": 1,
                  "pointHitRadius": 10,
                  "pointHoverBackgroundColor": "rgba(75,192,192,1)",
                  "pointHoverBorderColor": "rgba(220,220,220,1)",
                  "pointHoverBorderWidth": 2,
                  "pointHoverRadius": 5,
                  "pointRadius": 1,
                },
              ],
              "labels": Array [
                "03/10/2019",
                "04/10/2019",
                "05/10/2019",
                "06/10/2019",
                "07/10/2019",
                "08/10/2019",
                "09/10/2019",
                "10/10/2019",
              ],
            }
          }
        />
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`Admin Stats setRange ALL should match snapshot 1`] = `
<Component
  flexColumn={true}
  hasPadding={true}
>
  <Component>
    <Component
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Component>
          Stats
        </Component>
      </div>
      <Component>
        Please select an area:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="area-apps-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Apps
        </Component>
        <Component
          dataTest="area-developers-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Developers
        </Component>
        <Component
          dataTest="area-installations-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Installations
        </Component>
      </Component>
      <Component>
        Please select a time range:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="range-week-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last week
        </Component>
        <Component
          dataTest="range-month-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last Month
        </Component>
        <Component
          dataTest="range-all-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          All time
        </Component>
      </Component>
      <Component>
        Showing results for ‘
        APPS
        ’ and ‘
        All Time
        ’
      </Component>
      <Component>
        Total: 
        0
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`Admin Stats setRange MONTH should match snapshot 1`] = `
<Component
  flexColumn={true}
  hasPadding={true}
>
  <Component>
    <Component
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Component>
          Stats
        </Component>
      </div>
      <Component>
        Please select an area:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="area-apps-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Apps
        </Component>
        <Component
          dataTest="area-developers-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Developers
        </Component>
        <Component
          dataTest="area-installations-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Installations
        </Component>
      </Component>
      <Component>
        Please select a time range:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="range-week-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last week
        </Component>
        <Component
          dataTest="range-month-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Last Month
        </Component>
        <Component
          dataTest="range-all-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          All time
        </Component>
      </Component>
      <Component>
        Showing results for ‘
        APPS
        ’ and ‘
        Last Month
        ’
      </Component>
      <div>
        <Line
          data={
            Object {
              "datasets": Array [
                Object {
                  "backgroundColor": "rgba(75,192,192,0.4)",
                  "borderCapStyle": "butt",
                  "borderColor": "rgba(75,192,192,1)",
                  "borderDash": Array [],
                  "borderDashOffset": 0,
                  "borderJoinStyle": "miter",
                  "data": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                  "fill": false,
                  "label": "Apps",
                  "lineTension": 0.1,
                  "pointBackgroundColor": "#fff",
                  "pointBorderColor": "rgba(75,192,192,1)",
                  "pointBorderWidth": 1,
                  "pointHitRadius": 10,
                  "pointHoverBackgroundColor": "rgba(75,192,192,1)",
                  "pointHoverBorderColor": "rgba(220,220,220,1)",
                  "pointHoverBorderWidth": 2,
                  "pointHoverRadius": 5,
                  "pointRadius": 1,
                },
              ],
              "labels": Array [
                "10/09/2019",
                "11/09/2019",
                "12/09/2019",
                "13/09/2019",
                "14/09/2019",
                "15/09/2019",
                "16/09/2019",
                "17/09/2019",
                "18/09/2019",
                "19/09/2019",
                "20/09/2019",
                "21/09/2019",
                "22/09/2019",
                "23/09/2019",
                "24/09/2019",
                "25/09/2019",
                "26/09/2019",
                "27/09/2019",
                "28/09/2019",
                "29/09/2019",
                "30/09/2019",
                "01/10/2019",
                "02/10/2019",
                "03/10/2019",
                "04/10/2019",
                "05/10/2019",
                "06/10/2019",
                "07/10/2019",
                "08/10/2019",
                "09/10/2019",
                "10/10/2019",
              ],
            }
          }
        />
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`Admin Stats setRange WEEK should match snapshot 1`] = `
<Component
  flexColumn={true}
  hasPadding={true}
>
  <Component>
    <Component
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Component>
          Stats
        </Component>
      </div>
      <Component>
        Please select an area:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="area-apps-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Apps
        </Component>
        <Component
          dataTest="area-developers-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Developers
        </Component>
        <Component
          dataTest="area-installations-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Installations
        </Component>
      </Component>
      <Component>
        Please select a time range:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="range-week-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Last week
        </Component>
        <Component
          dataTest="range-month-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last Month
        </Component>
        <Component
          dataTest="range-all-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          All time
        </Component>
      </Component>
      <Component>
        Showing results for ‘
        APPS
        ’ and ‘
        Last Week
        ’
      </Component>
      <div>
        <Line
          data={
            Object {
              "datasets": Array [
                Object {
                  "backgroundColor": "rgba(75,192,192,0.4)",
                  "borderCapStyle": "butt",
                  "borderColor": "rgba(75,192,192,1)",
                  "borderDash": Array [],
                  "borderDashOffset": 0,
                  "borderJoinStyle": "miter",
                  "data": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                  "fill": false,
                  "label": "Apps",
                  "lineTension": 0.1,
                  "pointBackgroundColor": "#fff",
                  "pointBorderColor": "rgba(75,192,192,1)",
                  "pointBorderWidth": 1,
                  "pointHitRadius": 10,
                  "pointHoverBackgroundColor": "rgba(75,192,192,1)",
                  "pointHoverBorderColor": "rgba(220,220,220,1)",
                  "pointHoverBorderWidth": 2,
                  "pointHoverRadius": 5,
                  "pointRadius": 1,
                },
              ],
              "labels": Array [
                "03/10/2019",
                "04/10/2019",
                "05/10/2019",
                "06/10/2019",
                "07/10/2019",
                "08/10/2019",
                "09/10/2019",
                "10/10/2019",
              ],
            }
          }
        />
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`Admin Stats should match snapshot 1`] = `
<Component
  flexColumn={true}
  hasPadding={true}
>
  <Component>
    <Component
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Component>
          Stats
        </Component>
      </div>
      <Component>
        Please select an area:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="area-apps-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Apps
        </Component>
        <Component
          dataTest="area-developers-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Developers
        </Component>
        <Component
          dataTest="area-installations-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Installations
        </Component>
      </Component>
      <Component>
        Please select a time range:
      </Component>
      <Component>
        <Component
          className="ml-0"
          dataTest="range-week-btn"
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Last week
        </Component>
        <Component
          dataTest="range-month-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          Last Month
        </Component>
        <Component
          dataTest="range-all-btn"
          onClick={[Function]}
          type="button"
          variant="secondary"
        >
          All time
        </Component>
      </Component>
      <Component>
        Showing results for ‘
        APPS
        ’ and ‘
        Last Week
        ’
      </Component>
      <div>
        <Line
          data={
            Object {
              "datasets": Array [
                Object {
                  "backgroundColor": "rgba(75,192,192,0.4)",
                  "borderCapStyle": "butt",
                  "borderColor": "rgba(75,192,192,1)",
                  "borderDash": Array [],
                  "borderDashOffset": 0,
                  "borderJoinStyle": "miter",
                  "data": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                  "fill": false,
                  "label": "Apps",
                  "lineTension": 0.1,
                  "pointBackgroundColor": "#fff",
                  "pointBorderColor": "rgba(75,192,192,1)",
                  "pointBorderWidth": 1,
                  "pointHitRadius": 10,
                  "pointHoverBackgroundColor": "rgba(75,192,192,1)",
                  "pointHoverBorderColor": "rgba(220,220,220,1)",
                  "pointHoverBorderWidth": 2,
                  "pointHoverRadius": 5,
                  "pointRadius": 1,
                },
              ],
              "labels": Array [
                "03/10/2019",
                "04/10/2019",
                "05/10/2019",
                "06/10/2019",
                "07/10/2019",
                "08/10/2019",
                "09/10/2019",
                "10/10/2019",
              ],
            }
          }
        />
      </div>
    </Component>
  </Component>
</Component>
`;
